--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="" />
+    <meta name="description" content="BootStrap Example site" />
+    <meta name="keywords" content="HTML, CSS, BootStrap" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BootStrapSite Example</title>
     <!-- CSS only -->
@@ -15,7 +16,10 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav
+      class="navbar navbar-expand-sm navbar-dark bg-dark"
+      style="height: 120px"
+    >
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">BootStrapSite</a>
@@ -79,7 +83,10 @@
         </div>
       </div>
     </div>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav
+      class="navbar navbar-expand-sm navbar-dark bg-dark"
+      style="height: 100px"
+    >
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">BootStrapSite</a>
